Remove version-info.jar

--- a/gradle/buildSplits.gradle
+++ b/gradle/buildSplits.gradle
@@ -94,8 +94,7 @@ def buckets = [
         ":resourcesSftp",
         ":messaging",
         ":logging",
-        ":resourcesHttp",
-        ":versionInfo"
+        ":resourcesHttp"
     ],
 
     "8": [
